Remove unused font files and update font family in home.scss

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,18 +1,16 @@
 @font-face {
   font-family: 'Helvetica Neue LT Bulk Pro';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: local('Helvetica Neue LT Bulk Pro'), url('../fonts/HelveticaNeueLTProBlkEx.otf') format('otf');
+  font-weight: normal;
+  src: url('http://dev.skullcandy.com.pe/wp-content/themes/skdy_web_peru/src/fonts/HelveticaNeueLTProBlkEx.otf') format('otf');
 }
 
-@font-face {
-  font-family: 'Helvetica Neue LT Pro';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: local('Helvetica Neue LT Pro'), url('../fonts/HelveticaNeueLTProEx.otf') format('otf');
-}
+// @font-face {
+//   font-family: 'Helvetica Neue LT Pro';
+//   font-style: normal;
+//   font-weight: 500;
+//   font-display: swap;
+//   src: local('Helvetica Neue LT Pro'), url('../fonts/HelveticaNeueLTProEx.otf') format('otf');
+// }
 
 
 @font-face {
