--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -128,7 +128,7 @@
 }
 
 .home-title{
-  font-family: $helveticaBulk;
+  font-family: 'Helvetica Neue LT Bulk Pro';
   font-size: 3.5rem;
   font-weight: 600;
   margin-bottom: 0.3rem;
