Update font file paths in CSS and SCSS files

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Helvetica Neue LT Bulk Pro';
   font-weight: normal;
-  src: local('Helvetica Neue LT Bulk Pro'), url('../fonts/HelveticaNeueLTProBlkEx.otf') format('otf');
+  src: url('../../src/fonts/HelveticaNeueLTProBlkEx.otf'), format('otf');
 }
 
 // @font-face {
