--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Helvetica Neue LT Bulk Pro';
   font-weight: normal;
-  src: url(../fonts/HelveticaNeueLTProBlkEx.otf) format('otf');
+  src: url(../fonts/HelveticaNeueLTProBlkEx.otf), format('otf');
 }
 
 // @font-face {
