Update font sizes and letter spacing in home.scss

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -129,7 +129,7 @@
 
 .home-title{
   font-family: 'Helvetica Neue LT Bulk Pro';
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 600;
   margin-bottom: 0.3rem;
   text-align: start;
@@ -148,9 +148,10 @@
 }
 
 .home-title--bold{
+  font-family: 'Helvetica Neue LT Pro';
   font-weight: 700;
-  font-size: 2.5rem;
-  letter-spacing: 4px;
+  font-size: 2rem;
+  letter-spacing: 1px;
 
   @media (max-width: 640px) {
     font-size: 1rem;
