Add font-family to home title button

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -190,6 +190,7 @@
 }
 
 .home-title__button{
+  font-family: 'Helvetica Neue LT Pro';
   display: block;
   background-color: transparent;
   color: white;
