--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -71,11 +71,12 @@
   position: absolute;
   top:0;
   left: 0;
-  transform: translate(50%, 20%);
+  transform: translate(20%, 50%);
   @media (max-width:1280px){
     top: 0%;
     left: 0%;
-    transform: translate(10%, 50%);
+    transform: translate(25%, 5%);
+    max-width: 250px;
   }
 }
 
@@ -141,15 +142,15 @@
   text-align: start;
   color: white;
   letter-spacing: -3px;
-  // display: none;
 
   @media (max-width: 1280px) {
     font-size: 2rem;
   }
 
   @media (max-width: 640px) {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     text-align: center;
+    letter-spacing: -1px;
   }
 }
 
