Update product.scss and product.js, add popup close functionality

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1411,7 +1411,8 @@ body.layout-2 {
   align-items: center;
   gap: 20px;
   padding: 20px;
-  background-color: white;
+  background-color: black;
+  color:white;
   border-radius: 20px;
   width: 400px;
   height: 400px;
