Fix font family and styling in popup__presale. Add styles for forms_button and forms__input.

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1404,6 +1404,7 @@ body.layout-2 {
 }
 
 .popup__presale{
+  font-family: 'Helvetica Neue LT Pro';
   display: none;
   // display: flex;
   flex-direction: column;
@@ -1467,4 +1468,61 @@ body.layout-2 {
       color: black;
     }
   }
+}
+
+
+.forms_button{
+  width: 70%;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: #41BA0B;
+  color:white;
+  font-size: 1.3rem;
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+
+  &:hover{
+      background-color: #85c069;
+      color: #41BA0B;
+      transition: all 0.3s ease-in-out;
+  }
+
+  &:active{
+      background-color: #41BA0B;
+  }
+
+  @media (max-width: 768px) {
+      width: 100%;
+  }
+}
+
+form > p {
+  display: flex;
+  flex-direction: column;
+  gap:20px;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
+  letter-spacing: -0.5px;
+}
+
+.forms__input{
+  width: 100%;
+  padding: 10px 20px;
+  border: 0px;
+  background-color: transparent;
+  border-bottom: 1px solid #c3c3c3;
+  color:#c3c3c3;
+  font-size: 1rem;
+  font-weight: 400;
+
+  &:active {
+      border-bottom: 1px solid white;
+      color: white;
+  }
+
+  
+
 }
