Update product.scss and functions.php

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1433,7 +1433,7 @@ body.layout-2 {
     height: 250px;
   }
 
-  .popup__presale__title{
+  .popup__presale__content__title{
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
@@ -1442,7 +1442,7 @@ body.layout-2 {
     }
   }
 
-  .popup__presale__text{
+  .popup__presale__content__text{
     font-size: 1rem;
     font-weight: 600;
     text-align: center;
